# genotype

./: .env.example  .envrc.example  .gitignore  .oxfmtrc.json  .tool-versions  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  TODO.md  cliff.toml  flake.nix  fnox.toml  install.sh  mise.toml  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
cli/: Cargo.toml
cli/examples/guide/: guide.type  module.type
cli/src/: main.rs
cli/src/commands/: build.rs  init.rs
cli/src/diagnostic/: error.rs
config/: Cargo.toml
config/src/: config.rs  error.rs  find.rs  index.rs  lib.rs  path.rs  paths.rs
config/src/diagnostic/: error.rs  result.rs
config/src/lang/: mod.rs  path.rs  py.rs  rs.rs  ts.rs
config/src/pkg/: mod.rs  paths.rs
config/src/prelude/: internal.rs
examples/04-tests/literals/: genotype.py-latest.toml  genotype.py-legacy.toml  genotype.toml  package.json  pyproject.toml  test.py  test.sh  test.ts
examples/04-tests/literals/rs/: Cargo.toml
examples/04-tests/literals/src/: model.type
json/converter/: Cargo.toml
json/converter/src/: lib.rs
json/converter/src/convert/: context.rs
json/converter/src/format/: mod.rs
json/converter/src/schema/: any.rs  array.rs  boolean.rs  literal.rs  mod.rs  null.rs  number.rs  object.rs  string.rs  trait.rs  tuple.rs  union.rs
json/converter/src/tree/: any.rs  array.rs  boolean.rs  literal.rs  mod.rs  null.rs  number.rs  object.rs  property.rs  string.rs  trait.rs  tuple.rs  union.rs
json/schema/: Cargo.toml  genotype.toml
json/schema/libs/py/: pyproject.toml
json/schema/libs/rs/: Cargo.toml
json/schema/libs/ts/: package.json
json/schema/src/: convert.rs  json.type  lib.rs
json/schema/src/tree/: any.rs  array.rs  boolean.rs  literal.rs  mod.rs  null.rs  number.rs  object.rs  string.rs  tuple.rs  union.rs
json/source/: Cargo.toml
json/source/src/: lib.rs
json/source/src/converter/: mod.rs
lang/core/codegen/: Cargo.toml
lang/core/codegen/src/: export.rs  import.rs  lib.rs  module.rs  resolve.rs  result.rs  trait.rs
lang/core/config/: Cargo.toml
lang/core/config/src/: common.rs  index.rs  lib.rs  out.rs  package.rs  path.rs
lang/core/converter/: Cargo.toml
lang/core/project/: Cargo.toml
lang/core/project/src/: error.rs  file.rs  index.rs  lib.rs  manifest.rs  module.rs  path.rs  project.rs  source.rs
lang/core/tree/: Cargo.toml  Justfile
lang/core/tree/src/: dependency.rs  embed.rs  export.rs  import.rs  indent.rs  lib.rs  render.rs
lang/py/codegen/: Cargo.toml
lang/py/codegen/src/: lib.rs  prelude.rs
lang/py/config/: Cargo.toml
lang/py/config/src/: index.rs  lang.rs  lib.rs  module.rs  path.rs  project.rs  version.rs
lang/py/converter/: Cargo.toml
lang/py/converter/src/: alias.rs  any.rs  array.rs  branded.rs  context.rs  convert.rs  descriptor.rs  doc.rs  extension.rs  identifier.rs  import.rs  import_name.rs  inline_import.rs  key.rs  lib.rs  literal.rs  mock.rs  module.rs  object.rs  path.rs  primitive.rs  property.rs  record.rs  record_key.rs  reference.rs  resolve.rs  tuple.rs  union.rs
lang/py/project/: Cargo.toml
lang/py/project/src/: error.rs  index.rs  lib.rs  manifest.rs  module.rs  project.rs
lang/py/runtime/: Justfile  README.md  pyproject.toml
lang/py/runtime/genotype/: __init__.py  model.py
lang/py/tree/: Cargo.toml
lang/py/tree/src/: lib.rs  (+1 more)
lang/py/visitor/: Cargo.toml
lang/rs/codegen/: Cargo.toml
lang/rs/config/: Cargo.toml
lang/rs/converter/: Cargo.toml
lsp/: Cargo.toml  Justfile  index.js  package.json
lsp/npm/darwin-arm64/: README.md  package.json
lsp/npm/darwin-x64/: README.md  package.json
lsp/npm/linux-arm64/: package.json
lsp/npm/linux-x64/: README.md  package.json
lsp/npm/win32-arm64/: package.json
lsp/npm/win32-x64/: README.md  package.json
lsp/src/: main.rs
parser/: Cargo.toml
parser/examples/syntax/: 02-primitives.type  05-optional.type  06-nested.type  10-extensions.type  11-literals.type  12-unions.type  13-attributes.type  14-records.type
parser/src/: Cargo.toml  lib.rs  main.rs
parser/src/diagnostic/: error.rs  mod.rs  node.rs  result.rs  source_code.rs  span.rs
parser/src/module/: mod.rs  parse.rs  resolve.rs
parser/src/naming/: mod.rs
parser/src/parser/: grammar.pest  mod.rs
parser/src/prelude/: internal.rs
parser/src/test/: mod.rs  parser.rs
parser/src/tree/: alias.rs  array.rs  descriptor.rs  import.rs  mod.rs  module.rs  name.rs  object.rs  primitive.rs  property.rs  reference.rs  tuple.rs  union.rs
path/: Cargo.toml
path/src/: cwd.rs  dist.rs  entry.rs  index.rs  lib.rs  pkg.rs  pkg_src.rs  root.rs  src.rs
path/src/prelude/: internal.rs
project/: Cargo.toml
project/examples/basic/: order.type  user.type
project/examples/demo/: author.type  base.type  order.type  user.type
project/examples/process/: anonymous.type
project/src/: error.rs  lib.rs  loader.rs  module.rs  path.rs  project.rs  visitor.rs
project/src/diagnostic/: error.rs  result.rs
project/src/module/: definition.rs  identifier.rs  mod.rs  parse.rs  path.rs  resolve.rs
project/src/prelude/: internal.rs
project/src/project/: mod.rs
project/src/resolve/: mod.rs  visitor.rs
project/src/visitor/: load.rs  mod.rs  resolve.rs
server/: Cargo.toml
visitor/: Cargo.toml
visitor/src/: lib.rs  traverse.rs  visitor.rs
visitor/src/traverse/: alias.rs  any.rs  array.rs  attribute.rs  attribute_assignment.rs  attribute_descriptor.rs  attribute_key.rs  attribute_name.rs  attribute_property.rs  attribute_value.rs  branded.rs  descriptor.rs  doc.rs  extension.rs  identifier.rs  import.rs  import_name.rs  import_reference.rs  inline_import.rs  key.rs  literal.rs  mod.rs  module.rs  name.rs  object.rs  object_name.rs  path.rs  primitive.rs  property.rs  record.rs  record_key.rs  reference.rs  tuple.rs  union.rs
visitor/src/visitor/: mock.rs  mod.rs
workspace/: Cargo.toml
workspace/src/: error.rs  file.rs  lib.rs  path.rs  workspace.rs
workspace/src/file/: kind.rs  mod.rs  payload.rs
writer/: Cargo.toml
writer/src/: lib.rs
(+2000 files in other folders)
