[workspace]
resolver = "2"
members = [
  "lang/core/tree",
  "lang/core/project",
  "lang/core/codegen",
  "lang/ts/tree",
  "lang/ts/converter",
  "lang/ts/project",
  "lang/ts/config",
  "lang/ts/codegen",
  "lang/py/tree",
  "lang/py/converter",
  "lang/py/project",
  "lang/py/config",
  "lang/py/visitor",
  "lang/py/codegen",
  "lang/rs/core",
  "lang/rs/tree",
  "lang/rs/converter",
  "lang/rs/project",
  "lang/rs/config",
  "lang/rs/visitor",
  "lang/rs/runtime/literals",
  "lang/rs/runtime/core",
  "lang/rs/codegen",
  "json/types/libs/rs",
  "json/converter",
  "lsp",
  "parser",
  "project",
  "visitor",
  "writer",
  "cli",
  "config",
  "workspace",
  "watcher",
]
