[workspace]
resolver = "2"
members = [
  "lang/core/tree",
  "lang/core/config",
  "lang/core/project",
  "lang/core/codegen",
  "lang/ts/tree",
  "lang/ts/project",
  "lang/ts/config",
  "lang/ts/codegen",
  "lang/py/tree",
  "lang/py/project",
  "lang/py/config",
  "lang/py/codegen",
  "lang/rs/core",
  "lang/rs/tree",
  "lang/rs/project",
  "lang/rs/config",
  "lang/rs/runtime/literals",
  "lang/rs/runtime/core",
  "json/types/libs/rs",
  "json/converter",
  "lsp",
  "parser",
  "project",
  "visitor",
  "writer",
  "cli",
  "config",
  "workspace",
  "watcher",
  "path",
]
