[workspace]
resolver = "2"
members = [
  "pkgs/crate-genotype-lang-core-tree",
  "pkgs/crate-genotype-lang-core-config",
  "pkgs/crate-genotype-lang-core-project",
  "pkgs/crate-genotype-lang-ts-tree",
  "pkgs/crate-genotype-lang-ts-project",
  "pkgs/crate-genotype-lang-ts-config",
  "pkgs/crate-genotype-lang-py-tree",
  "pkgs/crate-genotype-lang-py-project",
  "pkgs/crate-genotype-lang-py-config",
  "pkgs/crate-genotype-lang-rs-tree",
  "pkgs/crate-genotype-lang-rs-project",
  "pkgs/crate-genotype-lang-rs-config",
  "pkgs/crate-litty",
  "pkgs/crate-litty-macro-tests",
  "pkgs/crate-genotype-runtime",
  "pkgs/npm-genotype-json-types/dist/rs",
  "pkgs/crate-genotype-json-converter",
  "pkgs/crate-genotype-lsp",
  "pkgs/crate-genotype-parser",
  "pkgs/crate-genotype-project",
  "pkgs/crate-genotype-visitor-macro",
  "pkgs/crate-genotype-cli",
  "pkgs/crate-genotype-workspace-core",
  "pkgs/crate-genotype-workspace",
  "pkgs/crate-genotype-watcher",
  "pkgs/crate-genotype-project-core",
  "pkgs/crate-genotype-test",
  "pkgs/crate-toml-ext",
]
