[package]
name = "genotype_cli"
version = "0.14.0"
edition = "2024"
description = "Genotype language CLI"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
genotype_path = { version = "0.14.0", path = "../path" }
genotype_project = { version = "0.14.0", path = "../project" }
genotype_config = { version = "0.14.0", path = "../config" }
genotype_writer = { version = "0.14.0", path = "../writer" }
genotype_lang_core_project = { version = "0.14.0", path = "../lang/core/project" }
genotype_lang_ts_project = { version = "0.14.0", path = "../lang/ts/project" }
genotype_lang_ts_config = { version = "0.14.0", path = "../lang/ts/config" }
genotype_lang_py_project = { version = "0.14.0", path = "../lang/py/project" }
genotype_lang_py_tree = { version = "0.14.0", path = "../lang/py/tree" }
genotype_lang_py_config = { version = "0.14.0", path = "../lang/py/config" }
genotype_lang_rs_project = { version = "0.14.0", path = "../lang/rs/project" }
genotype_lang_rs_config = { version = "0.14.0", path = "../lang/rs/config" }
clap = { version = "4.5.19", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
owo-colors = "4.1.0"
inquire = "0.7.5"
heck = "0.5.0"
regex = "1.11.1"
toml = { version = "0.8.19", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
