[package]
name = "genotype_config"
version = "0.10.0"
edition = "2021"
description = "Genotype language config crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_lang_py_config = { version = "0.10.0", path = "../lang/py/config" }
genotype_lang_ts_config = { version = "0.10.0", path = "../lang/ts/config" }
genotype_lang_rs_config = { version = "0.10.0", path = "../lang/rs/config" }
clap = "4.5.20"
figment = { version = "0.10.19", features = ["toml", "env"] }
miette = "7.2.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
heck = "0.5.0"
toml = { version = "0.8.19", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
