[package]
name = "genotype_parser"
version = "0.1.1"
edition = "2021"
description = "Genotype language parser crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"


[dependencies]
pest = "2.7.12"
pest_derive = "2.7.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
