[package]
name = "genotype_parser"
version = "0.9.0"
edition = "2021"
description = "Genotype language parser crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"


[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7.13", features = ["miette-error"] }
pest_derive = "2.7.13"
thiserror = "1.0.64"
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
