[package]
name = "genotype_parser"
version = "0.14.0"
edition = "2024"
description = "Genotype language parser crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
miette = { version = "7.6.0", features = ["fancy", "serde"] }
pest = { version = "2.8.6", features = ["miette-error"] }
pest_derive = "2.8.6"
thiserror = "1.0.64"
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.11.0", features = ["serde"] }
genotype_visitor_macro = { version = "0.14.0", path = "../pkgs/genotype_visitor_macro" }

[dev-dependencies]
pretty_assertions = "1.4.1"
insta = { version = "1.46.3", features = ["ron"] }
indoc = "2.0.7"

[features]
default = []
test = []
