[package]
name = "genotype_path"
version = "0.11.0"
edition = "2021"
description = "Genotype language path crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.11.0", path = "../parser", optional = true }
relative-path = "1.9.3"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = []
project = ["parser"]
parser = ["genotype_parser"]
