[package]
name = "genotype_path"
version = "0.11.0"
edition = "2021"
description = "Genotype language path crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
relative-path = "1.9.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
