[package]
name = "genotype_server"
version = "0.6.0"
edition = "2021"
description = "Genotype language server"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
miette = "7.2.0"
thiserror = "1.0.64"

[dev-dependencies]
pretty_assertions = "1.4.1"
