[package]
name = "genotype_visitor"
version = "0.7.0"
edition = "2021"
description = "Genotype language visitor crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.7.0", path = "../parser" }

[dev-dependencies]
miette = "7.2.0"
pretty_assertions = "1.4.1"
