[package]
name = "genotype_workspace"
version = "0.5.0"
edition = "2021"
description = "Genotype language workspace"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.5.0", path = "../parser" }
genotype_config = { version = "0.5.0", path = "../config" }
miette = "7.2.0"
thiserror = "1.0.64"
num_cpus = "1.16.0"
rayon = "1.10.0"
indexmap = "2.6.0"
sha2 = "0.10.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
