[package]
name = "genotype_writer"
version = "0.2.0"
edition = "2021"
description = "Genotype language writer crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_lang_core_project = { version = "0.2.0", path = "../lang/core/project" }
genotype_config = { version = "0.1.1", path = "../config" }

[dev-dependencies]
pretty_assertions = "1.4.1"
