[package]
name = "genotype_json_converter"
version = "0.13.0"
edition = "2024"
description = "Genotype language JSON tree converter crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.13.0", path = "../../parser" }
genotype_json_types = { version = "0.3.0", path = "../types/dist/rs" }
litty = { version = "0.2.0", path = "../../lang/rs/runtime/litty" }
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.64"
heck = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
