[package]
name = "genotype_json_schema"
version = "0.7.0"
description = "Genotype language JSON Schema crate"
edition = "2021"
license = "MIT"

[dependencies]
genotype_json_converter = { path = "../converter" }
genotype_json_tree = { path = "../tree/libs/rs" }
serde = { version = "1", features = ["derive"] }
literals = "0.1"
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "1.4.1"
