[package]
name = "genotype_json_schema"
version = "0.9.0"
edition = "2021"
description = "Genotype language JSON Schema crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_json_converter = { version = "0.9.0", path = "../converter" }
genotype_json_tree = { version = "0.1.0", path = "../tree/libs/rs" }
serde = { version = "1", features = ["derive"] }
literals = "0.1"
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "1.4.1"
