[package]
name = "genotype_json_source"
version = "0.7.0"
edition = "2021"
description = "Genotype language JSON source crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.7.0", path = "../../parser" }
genotype_json_schema = { version = "0.1.0", path = "../schema/libs/rs" }
literals = { version = "0.1.0", path = "../../lang/rs/runtime/literals" }
miette = { version = "7.2.0", features = ["fancy"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "1.0.64"
heck = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
