[package]
name = "genotype_lang_core_config"
version = "0.11.0"
edition = "2021"
description = "Genotype language target config crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_path = { version = "0.11.0", path = "../../../path" }
delegate = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
toml = { version = "0.8.19" }
relative-path = "1.9.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
