[package]
name = "genotype_lang_core_converter"
version = "0.1.0"
edition = "2021"
description = "Genotype language target converter crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.2.0", path = "../../../parser" }

[dev-dependencies]
pretty_assertions = "1.4.1"
