[package]
name = "genotype_lang_core_project"
version = "0.4.1"
edition = "2021"
description = "Genotype language target project crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_project = { version = "0.4.1", path = "../../../project" }
miette = "7.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
