[package]
name = "genotype_lang_core_tree"
version = "0.11.0"
edition = "2021"
description = "Genotype language target crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
miette = "7.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
