[package]
name = "genotype_lang_core_tree"
version = "0.14.0"
edition = "2024"
description = "Genotype language target crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
miette = { version = "7.6.0", features = ["fancy", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
