[package]
name = "genotype_lang_py_codegen"
version = "0.12.0"
edition = "2021"
description = "Genotype language Python target codegen crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_lang_core_codegen = { version = "0.12.0", path = "../../core/codegen" }
genotype_lang_core_tree = { version = "0.12.0", path = "../../core/tree" }
genotype_lang_py_tree = { version = "0.12.0", path = "../tree" }
genotype_parser = { version = "0.12.0", path = "../../../parser" }
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
