[package]
name = "genotype_lang_py_config"
version = "0.11.0"
edition = "2021"
description = "Genotype language Python target config crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_lang_core_config = { version = "0.11.0", path = "../../core/config" }
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
