[package]
name = "genotype_lang_py_converter"
version = "0.1.0"
edition = "2021"
description = "Genotype language Python target converter crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.1.1", path = "../../../parser" }
genotype_lang_core_converter = { version = "0.1.0", path = "../../core/converter" }
genotype_lang_py_tree = { version = "0.1.0", path = "../tree" }
genotype_lang_py_config = { version = "0.1.0", path = "../config" }
heck = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
