[package]
name = "genotype_lang_py_converter"
version = "0.6.0"
edition = "2021"
description = "Genotype language Python target converter crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.6.0", path = "../../../parser" }
genotype_lang_py_tree = { version = "0.6.0", path = "../tree" }
genotype_lang_py_config = { version = "0.6.0", path = "../config" }
genotype_lang_py_visitor = { version = "0.6.0", path = "../visitor" }
heck = "0.5.0"
indexmap = "2.6.0"

[dev-dependencies]
miette = "7.2.0"
pretty_assertions = "1.4.1"
