[project]
name = "genotype-runtime"
version = "0.4.0"
description = "Genotype runtime for Python"
authors = [{ name = "Sasha Koss", email = "koss@nocorp.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pydantic>=2,<3", "pyhumps>=3,<4"]

[project.optional-dependencies]
dev = ["pytest-watch>=4.2.0,<5", "pytest>=8.3.3,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genotype"]
