[package]
name = "genotype_lang_py_visitor"
version = "0.10.0"
edition = "2021"
description = "Genotype language Python target visitor crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_lang_py_tree = { version = "0.10.0", path = "../tree" }

[dev-dependencies]
pretty_assertions = "1.4.1"
