[package]
name = "genotype_lang_rs_converter"
version = "0.10.0"
edition = "2021"
description = "Genotype language Rust target converter crate"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"
repository = "https://github.com/kossnocorp/genotype"

[dependencies]
genotype_parser = { version = "0.10.0", path = "../../../parser" }
genotype_lang_rs_tree = { version = "0.10.0", path = "../tree" }
genotype_lang_rs_config = { version = "0.10.0", path = "../config" }
heck = "0.5.0"
miette = "7.2.0"
thiserror = "1.0.64"

[dev-dependencies]
pretty_assertions = "1.4.1"
